# pitchfork-api

./: LICENSE  README.md  pyproject.toml
src/pitchfork_api/: __init__.py  client.py  scraper.py  sentiment.py
src/pitchfork_api/models/: album.py  review.py
src/pitchfork_api/utils/: cache.py  parsing.py
tests/: conftest.py  test_client.py  test_scraper.py  test_sentiment.py
tests/fixtures/: sample.html
