[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pitchfork-api"
version = "0.1.0"
description = "A Python API wrapper for Pitchfork music reviews with sentiment analysis"
readme = "README.md"
authors = [
    {name = "Pablo Maceda", email = "pablomaceda3@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
    "nltk>=3.6.0",
    "textblob>=0.15.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.5b2",
    "isort>=5.9.0",
    "flake8>=3.9.0",
    "mypy>=0.812",
]

[project.urls]
"Homepage" = "https://github.com/pablomaceda3/pitchfork-api"
"Bug Tracker" = "https://github.com/pablomaceda3/pitchfork-api/issues"
"Documentation" = "https://github.com/pablomaceda3/pitchfork-api#readme"

[project.scripts]
pitchfork = "pitchfork_api:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests that interact with external systems (select with '-m integration')",
    "slow: marks tests that are slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["pitchfork_api"]
omit = ["*/tests/*", "*/venv/*"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88